--- a/src/styles/mediaqueries.css
+++ b/src/styles/mediaqueries.css
@@ -12,6 +12,13 @@
   }
 }
 
+@media (min-width: 1201px) and (max-width: 1630px) {
+  #experience,
+  .experience-details-container {
+    margin-bottom: 24rem;
+  }
+}
+
 @media screen and (max-width: 1200px) {
   #desktop-nav {
     display: none;
