--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -378,12 +378,12 @@ article .icon {
 
 .project-img {
   border-radius: 2rem;
-  width: 90%;
-  height: 90%;
+  width: 65%;
+  height: 65%;
 }
 
 .project-title {
-  margin: 1rem;
+  margin: 1rem 1rem 0.3rem 1rem;
   color: black;
 }
 
